@@ -6,6 +6,7 @@ our $VERSION = '0.000160';
 
 use base 'Test2::Hub::Subtest';
 use Test2::Util::HashBase qw/ast_ids ast/;
+use Test2::Util qw/get_tid/;
 
 sub init {
     my $self = shift;
@@ -33,6 +34,26 @@ sub inherit {
     if (my $fs = $from->{+_FILTERS}) {
         push @{$self->{+_FILTERS}} => grep { $_->{inherit} } @$fs;
     }
+}
+
+sub send {
+    my $self = shift;
+    my ($e) = @_;
+
+    if (my $ast = $self->ast) {
+        if ($$ != $ast->pid || get_tid != $ast->tid) {
+            if (my $plan = $e->facet_data->{plan}) {
+                unless ($plan->{skip}) {
+                    my $trace = $e->facet_data->{trace};
+                    bless($trace, 'Test2::EventFacet::Trace');
+                    $trace->alert("A plan should not be set inside an async-subtest (did you call done_testing()?)");
+                    return;
+                }
+            }
+        }
+    }
+
+    return $self->SUPER::send($e);
 }
 
 1;
